--- a/clientPublic/src/app/pages/login-page/login-page.component.html
+++ b/clientPublic/src/app/pages/login-page/login-page.component.html
@@ -13,9 +13,9 @@
         <label for="password">
           <mat-icon>lock</mat-icon>
         </label>
-        <input id="password" formControlName="password" type="password">
+        <input id="password" formControlName="password" type="password" autocomplete="current-password">
       </div>
     </div>
-    <button type="submit">Login</button>
+    <button type="submit">Login <mat-icon>chevron_right</mat-icon></button>
   </form>
 </div>
