--- a/clientPrivate/src/app/components/collapse-menu/collapse-menu.component.html
+++ b/clientPrivate/src/app/components/collapse-menu/collapse-menu.component.html
@@ -1,5 +1,5 @@
-<div class="collapseContainer">
-  <div class="titleContainer" (click)="handleCollapse()">
+<div class="collapseContainer" [@preventAnimation]>
+  <div class="titleContainer" [ngClass]="{'collapsed': isCollapsed}" (click)="handleCollapse()">
     <mat-icon>expand_more</mat-icon>
     <div class="title">{{title}}</div>
   </div>
