--- a/clientPrivate/src/app/components/header/header.component.scss
+++ b/clientPrivate/src/app/components/header/header.component.scss
@@ -5,11 +5,12 @@
 	display: flex;
 	justify-content: space-between;
 	border-radius: 8px;
-	margin: 4px;
+	margin: 5px;
+	margin-bottom: 0;
 
 	.actionsContainer,
 	.routeContainer {
-		padding: 10px;
+		padding: 5px 10px;
 		display: flex;
 
 		mat-icon {
