--- a/clientPrivate/src/app/app.component.scss
+++ b/clientPrivate/src/app/app.component.scss
@@ -1,7 +1,9 @@
 .pageContainer {
 	display: flex;
 	flex-direction: column;
-	height: 100vh;
+	height: 100%;
+	max-height: 100vh;
+
 	background-color: black;
 	background-image: radial-gradient(
 			circle at 0% 100%,
