--- a/clientPrivate/src/app/components/collapse-menu/menu-item/menu-item.component.html
+++ b/clientPrivate/src/app/components/collapse-menu/menu-item/menu-item.component.html
@@ -1,5 +1,5 @@
 <div class="itemContainer" [ngClass]="{'selected': selected}">
-  <div class="text">
+  <div class="textContainer" title="{{text}}">
     <mat-icon>{{icon}}</mat-icon>
     <div class="text">{{text}}</div>
   </div>
