--- a/clientPrivate/src/app/components/collapse-menu/menu-item/menu-item.component.scss
+++ b/clientPrivate/src/app/components/collapse-menu/menu-item/menu-item.component.scss
@@ -11,10 +11,17 @@
 		color: rgba($color: var(--color1), $alpha: 1.0);
 	}
 
-	.text {
+	.textContainer {
 		display: flex;
 		flex-direction: row;
 		align-items: center;
+		overflow: hidden;
+
+		.text {
+			text-overflow: ellipsis;
+			white-space: nowrap;
+			overflow: hidden;
+		}
 	}
 
 	.badge {
