--- a/clientPrivate/src/styles.scss
+++ b/clientPrivate/src/styles.scss
@@ -54,3 +54,24 @@ body {
 	background-color: rgb(var(--bg1));
 	color: rgba(var(--font1), .8);
 }
+
+/* width */
+::-webkit-scrollbar {
+	width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+	background: transparent;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+	background: rgba($color: #000000, $alpha: .2);
+	border-radius: 8px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+	background: #555;
+}
