--- a/clientPrivate/src/styles.scss
+++ b/clientPrivate/src/styles.scss
@@ -69,9 +69,13 @@ body {
 ::-webkit-scrollbar-thumb {
 	background: rgba($color: #000000, $alpha: .2);
 	border-radius: 8px;
+
+	&:hover {
+		background-color: rgba($color: var(--color1), $alpha: .2);
+	}
 }
 
 /* Handle on hover */
-::-webkit-scrollbar-thumb:hover {
-	background: #555;
-}
+// ::-webkit-scrollbar-thumb:hover {
+// 	background: #555;
+// }
