--- a/clientPrivate/src/app/pages/home-page/home-page.component.html
+++ b/clientPrivate/src/app/pages/home-page/home-page.component.html
@@ -25,38 +25,46 @@
       </apx-chart>
     </div>
     <app-collapse-menu [title]="'BY STATUS'">
-      <app-menu-item (click)="handleStatusSelect('all')" [selected]="selectedStatus == 'all'" [icon]="'select_all'"
+      <app-menu-item (click)="handleSelectFilter('Status','all')" [selected]="Status == 'all'" [icon]="'select_all'"
         [text]="'All'">{{torrents.length}}
       </app-menu-item>
-      <app-menu-item (click)="handleStatusSelect('downloading')" [selected]="selectedStatus == 'downloading'"
+      <app-menu-item (click)="handleSelectFilter('Status','downloading')" [selected]="Status == 'downloading'"
         [icon]="'downloading'" [text]="'Downloading'">
         {{torrents.status['downloading'].length}}</app-menu-item>
-      <app-menu-item (click)="handleStatusSelect('complete')" [selected]="selectedStatus == 'complete'"
+      <app-menu-item (click)="handleSelectFilter('Status','complete')" [selected]="Status == 'complete'"
         [icon]="'done_all'" [text]="'Complete'">
         {{torrents.status['complete'].length}}</app-menu-item>
-      <app-menu-item (click)="handleStatusSelect('stopped')" [selected]="selectedStatus == 'stopped'" [icon]="'stop'"
+      <app-menu-item (click)="handleSelectFilter('Status','stopped')" [selected]="Status == 'stopped'" [icon]="'stop'"
         [text]="'Stopped'">
         {{torrents.status['stopped'].length}}</app-menu-item>
-      <app-menu-item (click)="handleStatusSelect('active')" [selected]="selectedStatus == 'active'"
+      <app-menu-item (click)="handleSelectFilter('Status','active')" [selected]="Status == 'active'"
         [icon]="'import_export'" [text]="'Active'">
         {{torrents.status['active'].length}}</app-menu-item>
-      <app-menu-item (click)="handleStatusSelect('inactive')" [selected]="selectedStatus == 'inactive'"
+      <app-menu-item (click)="handleSelectFilter('Status','inactive')" [selected]="Status == 'inactive'"
         [icon]="'mobiledata_off'" [text]="'Inactive'">
         {{torrents.status['inactive'].length}}</app-menu-item>
     </app-collapse-menu>
+    <app-collapse-menu [title]="'BY CATEGORY'">
+      <app-menu-item (click)="handleSelectFilter('Category','all')" [selected]="Category == 'all'" [text]="'All'">
+        {{torrents.length}}
+      </app-menu-item>
+      <app-menu-item (click)="handleSelectFilter('Category','uncategorized')" [selected]="Category == 'uncategorized'"
+        [text]="'Uncategorized'">
+        <!-- {{torrents.length}} -->
+      </app-menu-item>
+    </app-collapse-menu>
     <app-collapse-menu [title]="'BY TAG'">
-      <app-menu-item (click)="handleTagSelect('all')" [selected]="selectedTag == 'all'" [text]="'All'">
+      <app-menu-item (click)="handleSelectFilter('Tag','all')" [selected]="Tag == 'all'" [text]="'All'">
         {{torrents.length}}</app-menu-item>
-      <app-menu-item *ngFor="let item of torrents.tag" (click)="handleTagSelect(item)" [selected]="selectedTag == item"
+      <app-menu-item *ngFor="let item of torrents.tag" (click)="handleSelectFilter('Tag',item)" [selected]="Tag == item"
         [text]="item">
-
       </app-menu-item>
     </app-collapse-menu>
     <app-collapse-menu [title]="'BY TRACKER'">
-      <app-menu-item (click)="handleTrackerSelect('all')" [selected]="selectedTracker == 'all'" [text]="'All'">
+      <app-menu-item (click)="handleSelectFilter('Tracker','all')" [selected]="Tracker == 'all'" [text]="'All'">
         {{torrents.length}}</app-menu-item>
-      <app-menu-item *ngFor="let item of torrents.tracker|keyvalue" (click)="handleTrackerSelect(item.key)"
-        [selected]="selectedTracker == item.key" [text]="item.key">
+      <app-menu-item *ngFor="let item of torrents.tracker|keyvalue" (click)="handleSelectFilter('Tracker',item.key)"
+        [selected]="Tracker == item.key" [text]="item.key">
         {{item.value.length}}
       </app-menu-item>
     </app-collapse-menu>
