--- a/clientPrivate/src/app/pages/home-page/home-page.component.scss
+++ b/clientPrivate/src/app/pages/home-page/home-page.component.scss
@@ -11,6 +11,7 @@
 		@include backgroundBlur;
 		display: block;
 		width: 350px;
+		min-width: 350px;
 		border-radius: 8px;
 		margin: 5px;
 		overflow-y: auto;
@@ -81,6 +82,7 @@
 	}
 
 	.downloadPanel {
+		overflow: auto;
 		flex: 1;
 	}
 }
