--- a/clientPrivate/src/app/components/torrent-item/torrent-item.component.html
+++ b/clientPrivate/src/app/components/torrent-item/torrent-item.component.html
@@ -1,4 +1,4 @@
-<div class="itemContainer">
+<div class="itemContainer" appTorrentItemContext>
   <div class="item">
     <ng-container [ngSwitch]="item.state">
       <mat-icon class="statusIcon" [style]="'color: rgb(var(--color1)'" *ngSwitchCase="'pausedUP'">done</mat-icon>
