--- a/clientPrivate/src/app/pages/home-page/home-page.component.scss
+++ b/clientPrivate/src/app/pages/home-page/home-page.component.scss
@@ -82,7 +82,13 @@
 	}
 
 	.downloadPanel {
-		overflow: auto;
+		//overflow: auto;
 		flex: 1;
+
+		.torrentContainer {
+			height: 100%;
+			overflow: hidden;
+			overflow-y: auto;
+		}
 	}
 }
