--- a/clientPrivate/src/app/components/torrent-item/torrent-item.component.scss
+++ b/clientPrivate/src/app/components/torrent-item/torrent-item.component.scss
@@ -3,6 +3,7 @@
 	padding: 5px;
 	border-radius: 8px;
 	overflow: hidden;
+	cursor: pointer;
 
 	.item {
 		display: flex;
@@ -35,6 +36,7 @@
 	.row {
 		display: flex;
 		align-items: center;
+		overflow: hidden;
 
 		mat-icon {
 			font-size: 20px;
@@ -48,6 +50,7 @@
 		.name {
 			flex: 1;
 			overflow: hidden;
+			display: grid;
 
 			div {
 				margin-right: 10px;
