--- a/clientPrivate/src/app/components/collapse-menu/collapse-menu.component.scss
+++ b/clientPrivate/src/app/components/collapse-menu/collapse-menu.component.scss
@@ -1,36 +1,36 @@
 .collapseContainer {
-	padding: 10px;
+  padding: 10px;
 
-	.titleContainer {
-		cursor: pointer;
-		display: flex;
-		flex-direction: row;
-		font-size: 15px;
-		letter-spacing: 3px;
-		align-items: center;
-		font-weight: bold;
+  .titleContainer {
+    cursor: pointer;
+    display: flex;
+    flex-direction: row;
+    font-size: 15px;
+    letter-spacing: 3px;
+    align-items: center;
+    font-weight: bold;
 
-		&.collapsed {
-			mat-icon {
-				transform: rotate(-90deg);
-			}
-		}
+    &.collapsed {
+      mat-icon {
+        transform: rotate(-90deg);
+      }
+    }
 
-		mat-icon {
-			transition: transform .5s ease-out;
-			height: auto;
-			width: auto;
-			font-size: 20px;
-			margin-right: 10px;
-		}
+    mat-icon {
+      transition: transform 0.5s ease-out;
+      height: auto;
+      width: auto;
+      font-size: 20px;
+      margin-right: 10px;
+    }
 
-		&:hover {
-			color: rgba($color: var(--font1), $alpha: 1.0);
-		}
-	}
+    &:hover {
+      color: rgba($color: var(--font1), $alpha: 1);
+    }
+  }
 
-	.menuContainer {
-		padding: 10px;
-		overflow: hidden;
-	}
+  .menuContainer {
+    padding: 10px;
+    overflow: hidden;
+  }
 }
