--- a/clientPrivate/src/app/components/collapse-menu/menu-item/menu-item.component.scss
+++ b/clientPrivate/src/app/components/collapse-menu/menu-item/menu-item.component.scss
@@ -1,45 +1,45 @@
 .itemContainer {
-	display: flex;
-	align-items: center;
-	cursor: pointer;
-	padding: 10px 10px;
-	border-radius: 4px;
-	transition: color .25s ease-out;
-	// justify-content: space-between;
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+  padding: 10px 10px;
+  border-radius: 4px;
+  transition: color 0.25s ease-out;
+  // justify-content: space-between;
 
-	&.selected {
-		color: rgba($color: var(--color1), $alpha: 1.0);
-	}
+  &.selected {
+    color: rgba($color: var(--color1), $alpha: 1);
+  }
 
-	.textContainer {
-		display: flex;
-		flex-direction: row;
-		align-items: center;
-		overflow: hidden;
+  .textContainer {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    overflow: hidden;
 
-		.text {
-			text-overflow: ellipsis;
-			white-space: nowrap;
-			overflow: hidden;
-		}
-	}
+    .text {
+      text-overflow: ellipsis;
+      white-space: nowrap;
+      overflow: hidden;
+    }
+  }
 
-	.badge {
-		margin-left: 10px;
-		padding: 0px 10px;
-		border-radius: 50px;
-		font-weight: bold;
-		font-size: 14px;
-		background-color: rgba($color: var(--color1), $alpha: .4);
-	}
+  .badge {
+    margin-left: 10px;
+    padding: 0px 10px;
+    border-radius: 50px;
+    font-weight: bold;
+    font-size: 14px;
+    background-color: rgba($color: var(--color1), $alpha: 0.4);
+  }
 
-	mat-icon {
-		height: auto;
-		width: auto;
-		margin-right: 10px;
-	}
+  mat-icon {
+    height: auto;
+    width: auto;
+    margin-right: 10px;
+  }
 
-	&:hover {
-		background-color: rgba($color: black, $alpha: .25);
-	}
+  &:hover {
+    background-color: rgba($color: black, $alpha: 0.25);
+  }
 }
