--- a/clientPrivate/src/app/components/context/torrent-item-context/torrent-item-context.component.scss
+++ b/clientPrivate/src/app/components/context/torrent-item-context/torrent-item-context.component.scss
@@ -1,30 +1,36 @@
-@import '../../../../assets/variables';
+@import "../../../../assets/variables";
 
 .contextContainer {
-	@include backgroundBlur;
-	background-color: rgba($color: #000000, $alpha: .4);
-	border-radius: 8px;
-	padding: 10px;
+  @include backgroundBlur;
+  background-color: rgba($color: #000000, $alpha: 0.4);
+  border-radius: 8px;
+  padding: 10px;
 
-	.item {
-		display: flex;
-		padding: 7px;
-		border-radius: 8px;
-		cursor: pointer;
+  .item {
+    display: flex;
+    padding: 7px;
+    border-radius: 8px;
+    cursor: pointer;
 
-		&:hover {
-			background-color: rgba($color: white, $alpha: .1);
-		}
+    &:hover {
+      background-color: rgba($color: white, $alpha: 0.1);
+    }
 
-		mat-icon {
-			margin-right: 10px;
-			font-size: 20px;
-		}
-	}
+    mat-icon {
+      margin-right: 10px;
+      font-size: 20px;
+    }
+
+    .text {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+  }
 }
 
 .line {
-	margin: 5px 0;
-	height: 1px;
-	background-color: rgba($color: white, $alpha: .2);
+  margin: 5px 0;
+  height: 1px;
+  background-color: rgba($color: white, $alpha: 0.2);
 }
