--- a/clientPrivate/src/styles.scss
+++ b/clientPrivate/src/styles.scss
@@ -8,56 +8,62 @@ $clientPrivate-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
 $clientPrivate-warn: mat.define-palette(mat.$red-palette);
 
 $clientPrivate-theme: mat.define-light-theme(
-	 (color: (primary: $clientPrivate-primary, accent: $clientPrivate-accent, warn: $clientPrivate-warn))
+  (
+    color: (
+      primary: $clientPrivate-primary,
+      accent: $clientPrivate-accent,
+      warn: $clientPrivate-warn,
+    ),
+  )
 );
 
 @include mat.all-component-themes($clientPrivate-theme);
 
 /* You can add global styles to this file, and also import other style files */
 
-@import 'assets/variables';
+@import "assets/variables";
 :root {
-	@each $name, $color in $colors {
-		--#{$name}: #{$color};
-	}
+  @each $name, $color in $colors {
+    --#{$name}: #{$color};
+  }
 }
 
 * {
-	box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 html,
 body {
-	height: 100%;
+  height: 100%;
 }
 body {
-	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif,
-		"Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-	-webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
-	margin: 0;
-	background-color: rgb(var(--bg1));
-	color: rgba(var(--font1), .8);
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
+    Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  margin: 0;
+  background-color: rgb(var(--bg1));
+  color: rgba(var(--font1), 0.8);
 }
 
 ::-webkit-scrollbar {
-	width: 10px;
+  width: 10px;
 }
 
 ::-webkit-scrollbar-track {
-	background: transparent;
+  background: transparent;
 }
 
 ::-webkit-scrollbar-thumb {
-	background: rgba($color: #000000, $alpha: .2);
-	border-radius: 8px;
+  background: rgba($color: #000000, $alpha: 0.2);
+  border-radius: 8px;
 
-	&:hover {
-		background-color: rgba($color: var(--color1), $alpha: .2);
-	}
+  &:hover {
+    background-color: rgba($color: var(--color1), $alpha: 0.2);
+  }
 }
 
 mat-icon {
-	height: auto !important;
-	width: auto !important;
+  height: auto !important;
+  width: auto !important;
 }
